<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="32dp"
        android:text="@string/titulo"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/subtitulo"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RadioGroup
        android:id="@+id/rgForma"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/rbQuadrado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quadrado"
            android:onClick="getChecked"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rbTriangulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/triangulo"
            android:onClick="getChecked"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rbCirculo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bolinha"
            android:onClick="getChecked"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSelecao"
        android:layout_width="160dp"
        android:layout_height="76dp"
        android:layout_marginTop="82dp"
        android:text="@string/Btnseguinte"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgForma" />

    <TextView
        android:id="@+id/lblSelecao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblSelecao"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSelecao"
        app:layout_constraintVertical_bias="0.317" />

</androidx.constraintlayout.widget.ConstraintLayout>