<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    tools:context=".ResultActivitySquare">

    <TextView
        android:id="@+id/lblAreaTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="236dp"
        android:text="@string/lblAreaTotal"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="419dp"
        android:layout_height="382dp"
        app:layout_constraintBottom_toTopOf="@+id/lblAreaTotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/triangulo" />

    <TextView
        android:id="@+id/lblBase"
        android:layout_width="354dp"
        android:layout_height="47dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="320dp"
        android:layout_marginBottom="149dp"
        android:backgroundTint="#00000000"
        android:text="@string/affsa"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblAreaTotal"
        app:layout_constraintVertical_bias="0.333" />

    <TextView
        android:id="@+id/lblAltura"
        android:layout_width="351dp"
        android:layout_height="63dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="322dp"
        android:layout_marginBottom="106dp"
        android:text="@string/nçdbndç"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblBase"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>